# mela

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cyrius.cyml
benches/: hotpaths.cyr
docs/: benchmarks-rust-v-cyrius.md
docs/adr/: 0001-manifest-wire-format-json.md  0002-agent-version-as-str-descriptor.md  0003-trust-time-and-deferred-keyring-load.md  0004-transparency-timestamp-epoch.md  0005-registry-index-format-and-tarball-deferral.md  0006-remote-client-transport-seam.md  0007-ratings-f64-and-sandbox-rule-types.md  0008-packaging-gzip-ustar-and-cross-validation.md  0009-end-to-end-pipeline-and-gate-enforcement.md  0010-library-packaging-dist-bundle.md  README.md  template.md
docs/api/: README.md
docs/architecture/: README.md  overview.md
docs/audit/: 2026-06-17-audit.md
docs/development/: roadmap.md  state.md  threat-model.md
docs/examples/: publish-and-install.md
docs/guides/: getting-started.md
rust-old/: Cargo.toml
rust-old/src/: flutter_agpkg.rs  lib.rs  ratings.rs  remote_client.rs  sandbox_profiles.rs
src/: category.cyr  depgraph.cyr  flutter_agpkg.cyr  flutter_packaging.cyr  flutter_packaging.rs  local_registry.cyr  local_registry.rs  main.cyr  manifest.cyr  pipeline.cyr  ratings.cyr  remote_client.cyr  sandbox_profiles.cyr  transparency.cyr  transparency.rs  trust.cyr
tests/: mela.bcyr  mela.fcyr  mela.tcyr
